Added daily todos template to emacs config

--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -709,6 +709,11 @@ Org-roam is a plain-text knowledge management system. It brings some of Roam's m
            (file "~/.emacs.d/capture-templates/Todo.org")
            :target (file+head "todo/%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n")
            :unnarrowed t)))
+  (setq org-roam-dailies-capture-templates
+        '(("d" "default" plain
+          (file "~/.emacs.d/capture-templates/daily.org")
+          :target (file+head "%<%Y-%m-%d>.org" "#+title: %<%Y-%m-%d>\n")
+          :unnarrowed t)))
   (setq org-roam-node-display-template (concat "${title:*} " (propertize "${tags:10}" 'face 'org-tag)))
   (jm/org-roam-refresh-agenda-list)
   (org-roam-db-autosync-mode))
