--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -694,8 +694,10 @@ Org-roam is a plain-text knowledge management system. It brings some of Roam's m
          ("C-c n g" . org-roam-graph)
          ("C-c n i" . org-roam-node-insert)
          ("C-c n c" . org-roam-capture)
+
          ;; Dailies
-         ("C-c n j" . org-roam-dailies-capture-today))
+         ("C-c n j" . org-roam-dailies-capture-today)
+         ("C-c n k" . org-roam-dailies-capture-tomorrow))
   :config
   ;; If you're using a vertical completion framework, you might want a more informative completion interface
   (setq org-roam-capture-templates
