--- a/.emacs.d/capture-templates/daily.org
+++ b/.emacs.d/capture-templates/daily.org
@@ -7,15 +7,26 @@
 - [ ] Brush Teeth
 - [ ] Wash Face
 
+
+** Gym Regimen
+
+Do 2-3 sets of each exercise listed below.
+
+- [ ] Rowing - Until tired.
+- [ ] Squats - With heals until more flexible.
+- [ ] Bench Press/Dumbbells
+- [ ] Lat Pull-Downs 
+
+
 ** Tasks 
 
 *High Priority*
 
-- [ ] %?
+- [ ] 
 
 *Medium Priority*
 
-- [ ] 
+- [ ] %?
 
 *Low Priority*
 
