Added new keybinding to org-roam for linking to heading

--- a/.emacs.d/config.org
+++ b/.emacs.d/config.org
@@ -697,9 +697,9 @@ Org-roam is a plain-text knowledge management system. It brings some of Roam's m
   (org-roam-directory jm/org-roam-directory)
   :bind (("C-c n l" . org-roam-buffer-toggle)
          ("C-c n f" . org-roam-node-find)
-         ("C-c n g" . org-roam-graph)
          ("C-c n i" . org-roam-node-insert)
          ("C-c n c" . org-roam-capture)
+         ("C-c n o" . org-id-get-create)
 
          ;; Dailies
          ("C-c n j" . org-roam-dailies-capture-today)
